[package]
name = "event-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
http = "1.3.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
